cmake_minimum_required(VERSION 3.11)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project (ScreenTime VERSION1 1.0.0)
add_library(${PROJECT_NAME}) SHARED
    src/mod2.cpp
)
target_comile_features(${PROJECT_NAME}) PUBLIC cxx_std_20)
if (NOT DEFINED ENV{GEODE-SDK})
    message(FATAL_ERROR "GEODE_SDK i not defined")
else()
    message(STATUE "GEODE_SDK: $ENV{GEODE_SDK}")
endif()
add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
setup_geode_mod(${PROJEC_NAME})
