cmake_minimum_required(VERSION 3.21)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(ScreenTime VERSION 1.0.0)
add_library(${PROJECT_NAME} SHARED src/mod2.cpp)
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
if(NOT DEFINED ENV{GEODE_SDK})
message(FATAL_ERROR "GEODE_SDK is not defined")
else()
message(STATUS "GEODE_SDK: $ENV{GEODE_SDK}")
endif()
add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
setup_geode_mod(${PROJECT_NAME})
